개인페이지 추가(김현철)

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div id="img-team-k" class="front">
           </div>
           <!-- 뒷면 -->
-          <div class="back" id="img-back-1" onclick="location.href=''">
+          <div class="back" id="img-back-1" onclick="location.href='kim.html'">
             <p class="fs-3 mt-4">김현철</p>
             <p class="fs-5 text-start px-4">INFP</p>
           </div>
