개인페이지 href연결

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <!-- 앞면 -->
           <div id="img-team-p" class="front"></div>
           <!-- 뒷면 -->
-          <div class="back" id="img-back-2" onclick="location.href='team_l.html'">
+          <div class="back" id="img-back-2" onclick="location.href='index_soli.html'">
             <p class="fs-3 mt-4">박솔이</p>
             <p class="fs-5 text-start px-4">INFJ</p>
           </div>
