천영륜_개인페이지 연결.

--- a/index.html
+++ b/index.html
@@ -81,9 +81,8 @@
             <!-- 앞면 -->
             <div id="img-team-c" class="front"></div>
             <!-- 뒷면 -->
-            <div class="back" id="img-back-4" onclick="location.href=''">
-                <p class="fs-3 mt-4">천영륜</p>
-                <p class="fs-5 text-start px-4">ISFP</p>
+            <div class="back" id="img-back-4" onclick="location.href='introduce_c.html'">
+                천영륜 ISFP
           </div>
         </div>
       </div>
