--- a/introduce_c.html
+++ b/introduce_c.html
@@ -124,9 +124,9 @@
       <header class="d-flex justify-content-center py-5">
         <ul class="nav nav-pills">
           <li class="nav-item"><a href="index.html" class="nav-link nav-font-color">8조</a></li>
-          <li class="nav-item"><a href="#" class="nav-link nav-font-color">김현철</a></li>
-          <li class="nav-item"><a href="#" class="nav-link nav-font-color">박솔이</a></li>
-          <li class="nav-item"><a href="#" class="nav-link nav-font-color">이경욱</a></li>
+          <li class="nav-item"><a href="Kim.html" class="nav-link nav-font-color">김현철</a></li>
+          <li class="nav-item"><a href="index_soli.html" class="nav-link nav-font-color">박솔이</a></li>
+          <li class="nav-item"><a href="team_l.html" class="nav-link nav-font-color">이경욱</a></li>
           <li class="nav-item"><a href="#" class="nav-link nav-font-color">천영륜</a></li>
         </ul>
       </header>
