개인페이지 자바스크립트 수정(버튼클릭)

--- a/kim.html
+++ b/kim.html
@@ -83,6 +83,8 @@
                         <span class="massageBubble">
                             <div style="display: flex; flex-direction: column; gap: 8px; padding: 10px">
                                 <button
+                                    value="who"
+                                    class="btn-q"
                                     style="
                                         cursor: pointer;
                                         background-color: white;
@@ -94,6 +96,8 @@
                                     뭐하는 사람인가요?
                                 </button>
                                 <button
+                                    value="strengths"
+                                    class="btn-q"
                                     style="
                                         cursor: pointer;
                                         background-color: white;
@@ -105,6 +109,8 @@
                                     장점은 있나요?
                                 </button>
                                 <button
+                                    value="work-style"
+                                    class="btn-q"
                                     style="
                                         cursor: pointer;
                                         background-color: white;
@@ -121,65 +127,66 @@
                 </div>
             </div>
             <!--  -->
-
-            <!-- <div class="massage">
-                <img class="profileImg" />
-                <div class="massageContent">
-                    <span class="massageAuthor">김현철</span>
-                    <div class="messageInfo">
-                        <span class="massageBubble"
-                            >프로를 지향하는 아마추어의 마음으로 삶을 살고 있는 김현철 이라고 합니다.<br />
-                            아마추어의 마음으로는 프로가 되기 어려울지 모르지만<br />
-                            오랜 기간 동안 끝까지 포기하지 않는 사람들은 어떤 일이든 성공할 가능성이 있다고
-                            생각합니다.<br />
-                            코딩 역시 동작 원리와 이론을 이해하는 것이 중요하지만, 화면을 구현하는 작업을 즐기며 천천히
-                            배우고 있습니다.<br />
-                            성격은 낯을 많이 가리고 부끄러움이 많습니다 발표를 할때 스스로 인정할정도로 완성도가 좋지
-                            않으면 남앞에 보이는게 많이 어렵습니다.<br />
-                            그렇지만 필요에 따라서 부끄러움 많은 사람도 여의치 않으면 시장에서 소리지르면서 물건도 팔게
-                            되더라고요<br />
-                            다 본인 성향대로만 살 수는 없으니까요 ㅠㅠ
-                        </span>
+            <div class="answer">
+                <div class="massage who hide">
+                    <img class="profileImg" />
+                    <div class="massageContent">
+                        <span class="massageAuthor">김현철</span>
+                        <div class="messageInfo">
+                            <span class="massageBubble"
+                                >프로를 지향하는 아마추어의 마음으로 삶을 살고 있는 김현철 이라고 합니다.<br />
+                                아마추어의 마음으로는 프로가 되기 어려울지 모르지만<br />
+                                오랜 기간 동안 끝까지 포기하지 않는 사람들은 어떤 일이든 성공할 가능성이 있다고
+                                생각합니다.<br />
+                                코딩 역시 동작 원리와 이론을 이해하는 것이 중요하지만, 화면을 구현하는 작업을 즐기며
+                                천천히 배우고 있습니다.<br />
+                                성격은 낯을 많이 가리고 부끄러움이 많습니다 발표를 할때 스스로 인정할정도로 완성도가
+                                좋지 않으면 남앞에 보이는게 많이 어렵습니다.<br />
+                                그렇지만 필요에 따라서 부끄러움 많은 사람도 여의치 않으면 시장에서 소리지르면서 물건도
+                                팔게 되더라고요<br />
+                                다 본인 성향대로만 살 수는 없으니까요 ㅠㅠ
+                            </span>
+                        </div>
                     </div>
                 </div>
-            </div> -->
 
-            <!--  -->
+                <!--  -->
 
-            <!-- <div class="massage">
-                <img class="profileImg" />
-                <div class="massageContent">
-                    <span class="massageAuthor">김현철</span>
-                    <div class="messageInfo">
-                        <span class="massageBubble"
-                            >남을 인정하는 데 저항이 적다는 것은 제 장점 중 하나 같습니다.<br />
-                            대부분 어떤 일이든 본인만의 스타일과 습관을 가지며, 그것을 바꾸는 것에 큰 저항감을
-                            가지지만<br />
-                            저는 지위나 나이와 상관 없이 좋아보이는 방식을 발견하면 종종 따라해보곤 합니다.<br />
-                            그리고 저의 제안이 거절당해도 별로 신경 쓰지않습니다.
-                        </span>
+                <div class="massage strengths hide">
+                    <img class="profileImg" />
+                    <div class="massageContent">
+                        <span class="massageAuthor">김현철</span>
+                        <div class="messageInfo">
+                            <span class="massageBubble"
+                                >남을 인정하는 데 저항이 적다는 것은 제 장점 중 하나 같습니다.<br />
+                                대부분 어떤 일이든 본인만의 스타일과 습관을 가지며, 그것을 바꾸는 것에 큰 저항감을
+                                가지지만<br />
+                                저는 지위나 나이와 상관 없이 좋아보이는 방식을 발견하면 종종 따라해보곤 합니다.<br />
+                                그리고 저의 제안이 거절당해도 별로 신경 쓰지않습니다.
+                            </span>
+                        </div>
                     </div>
                 </div>
-            </div> -->
-            <!--  -->
-            <!-- <div class="massage">
-                <img class="profileImg" />
-                <div class="massageContent">
-                    <span class="massageAuthor">김현철</span>
-                    <div class="messageInfo">
-                        <span class="massageBubble">
-                            용두사미라고 하면 적합할 것 같습니다.<br />
-                            아이디어가 떠올랐을때 엄청나게 불타오르지만 항상 디테일과 마무리에서 어려움을 많이
-                            느낍니다.<br />
-                            협업시엔 서로의 생각을 확인하는 것을 가장 중요하게 생각합니다.<br />
-                            군대에서 복명복창을 하는 것처럼 말 한마디도 똑바로 알아들었는지 확인하기 어려운데<br />
-                            추상적인 아이디어의 경우 잘못전달되어 그릇될 가능성이 크기에 <br />
-                            협업 시 팀원간 공통된 목표와 그것을 잘 이해하고 있는지를 가장 중요하게 여기는 편입니다.
-                            <br />
-                        </span>
+                <!--  -->
+                <div class="massage work-style hide">
+                    <img class="profileImg" />
+                    <div class="massageContent">
+                        <span class="massageAuthor">김현철</span>
+                        <div class="messageInfo">
+                            <span class="massageBubble">
+                                용두사미라고 하면 적합할 것 같습니다.<br />
+                                아이디어가 떠올랐을때 엄청나게 불타오르지만 항상 디테일과 마무리에서 어려움을 많이
+                                느낍니다.<br />
+                                협업시엔 서로의 생각을 확인하는 것을 가장 중요하게 생각합니다.<br />
+                                군대에서 복명복창을 하는 것처럼 말 한마디도 똑바로 알아들었는지 확인하기 어려운데<br />
+                                추상적인 아이디어의 경우 잘못전달되어 그릇될 가능성이 크기에 <br />
+                                협업 시 팀원간 공통된 목표와 그것을 잘 이해하고 있는지를 가장 중요하게 여기는 편입니다.
+                                <br />
+                            </span>
+                        </div>
                     </div>
                 </div>
-            </div> -->
+            </div>
         </main>
         <script src="kim.js"></script>
     </body>
