--- a/introduce_c.html
+++ b/introduce_c.html
@@ -8,6 +8,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <link rel="icon" href="favicon.svg">
 </head>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
@@ -17,12 +18,7 @@
     font-family: 'Gowun Dodum', sans-serif;
   }
 
-  .main {
-    background-color: black;
-    color: darkred;
-  }
-
-  .nav-font-color {
+  .main, .nav-font-color {
     color: darkred;
   }
 
@@ -93,7 +89,7 @@
     background-color: deepskyblue;
     padding: 20px;
     display: inline-block;
-    color:white;
+    color: white;
 
   }
 
@@ -161,9 +157,10 @@
                   <i class="bi bi-bookmark fs-2"></i>
                 </div>
               </div>
-              <div class="introduce fw-bold">#9기_React #8조 #천영륜 
-                <br/>
-                #ISFP #비전공자 #초보 # 잘부탁드립니다!</div>
+              <div class="introduce fw-bold">#3기_React #A-3조 #천영륜
+                <br />
+                #ISFP #비전공자 #초보 # 잘부탁드립니다!
+              </div>
             </div>
           </div>
         </div>
