개인페이지 svg경로 수정

--- a/kim.html
+++ b/kim.html
@@ -14,20 +14,20 @@
                     <div>
                         <h1>알수없는 대화상대</h1>
                         <div style="display: flex; align-items: center">
-                            <img src="account.svg" width="20" height="20" />
+                            <img src="./account.svg" width="20" height="20" />
                             <span>2</span>
                         </div>
                     </div>
                 </div>
                 <div style="display: flex; align-items: center; gap: 15px">
-                    <img src="/search.svg" width="30" height="30" />
-                    <img src="/tel.svg" width="30" height="30" />
-                    <img src="/cam.svg" width="30" height="30" />
-                    <img src="/hamburger.svg" width="30" height="30" />
+                    <img src="./search.svg" width="30" height="30" />
+                    <img src="./tel.svg" width="30" height="30" />
+                    <img src="./cam.svg" width="30" height="30" />
+                    <img src="./hamburger.svg" width="30" height="30" />
                 </div>
             </div>
             <div class="dropDownBox">
-                <img src="/speaker.svg" width="30" height="30" />
+                <img src="./speaker.svg" width="30" height="30" />
                 <p style="padding: 0px 20px; flex: 1; line-height: 120%; text-align: center">
                     <strong style="font-weight: bold; font-size: 20px; line-height: 40px"
                         >제목 : 공지사항 (선정자)(수정) [Web발신]</strong
@@ -42,7 +42,7 @@
                         >https://spartacodingclub.kr/</a
                     >
                 </p>
-                <img src="arrow.svg" width="30" height="30" />
+                <img src="./arrow.svg" width="30" height="30" />
             </div>
         </header>
 
@@ -120,6 +120,19 @@
                                     "
                                 >
                                     업무 스타일은?
+                                </button>
+                                <button
+                                    onclick="location.href='./' "
+                                    class="btn-q"
+                                    style="
+                                        cursor: pointer;
+                                        background-color: white;
+                                        font-size: 15px;
+                                        padding: 15px 20px;
+                                        border-radius: 8px;
+                                    "
+                                >
+                                    관심없어요.
                                 </button>
                             </div>
                         </span>
