조 이름 수정 및 천영륜 폴더생성

--- a/introduce_c/introduce_c.html
+++ b/introduce_c/introduce_c.html
@@ -59,7 +59,7 @@
     height: 500px;
     border: 3px solid white;
     border-bottom: 0;
-    background-image: url('.\\img_c.jpg');
+    background-image: url('../img_c.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -119,7 +119,7 @@
     <div class="main" id="back">
       <header class="d-flex justify-content-center py-5">
         <ul class="nav nav-pills">
-          <li class="nav-item"><a href="index.html" class="nav-link nav-font-color">8조</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link nav-font-color">A-03조</a></li>
           <li class="nav-item"><a href="Kim.html" class="nav-link nav-font-color">김현철</a></li>
           <li class="nav-item"><a href="index_soli.html" class="nav-link nav-font-color">박솔이</a></li>
           <li class="nav-item"><a href="team_l.html" class="nav-link nav-font-color">이경욱</a></li>
@@ -223,6 +223,16 @@
             </div>
           </div>
         </div>
+        <footer>
+          <div class="container">
+            <div class="chatting">
+            </div>
+            <div class="write">
+              <button> 확인 </button>
+            </div>
+           
+          </div>
+        </footer>
       </div>
     </div>
   </div>
