--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>8조 아이들</title>
+  <title>A-03조 아이들</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -14,7 +14,7 @@
 <body> 
   <!--상단-->
   <div class="main">
-      <div class="title">8조 아이들</div>
+      <div class="title">A-03조 아이들</div>
       <p class="explain">TEAM아이들은 MBTI에서 “I”특성을 가진 팀원들로 이루어진 팀입니다.<br>
         업무스타일은 다소 조용한 편이지만 각자의 아이디어와 역량을 조용하게 펼치며,<br>
         개발자로서 문제 해결 능력을 발휘하여 성장해 나가고자 합니다.</p>
@@ -81,7 +81,7 @@
             <!-- 앞면 -->
             <div id="img-team-c" class="front"></div>
             <!-- 뒷면 -->
-            <div class="back" id="img-back-4" onclick="location.href='introduce_c.html'">
+            <div class="back" id="img-back-4" onclick="location.href='introduce_c/introduce_c.html'">
                 천영륜 ISFP
           </div>
         </div>
