--- a/introduce_c/introduce_c.html
+++ b/introduce_c/introduce_c.html
@@ -9,110 +9,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <link rel="icon" href="favicon.svg">
+  <link rel="stylesheet" href="style_c.css"/>
+
 </head>
-<style>
-  @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
-  @import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css');
-
-  * {
-    font-family: 'Gowun Dodum', sans-serif;
-  }
-
-  .main, .nav-font-color {
-    color: darkred;
-  }
-
-  body,
-  #back {
-    background-image: url('.\\back.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-  }
-
-  div {
-    margin: 0;
-  }
-
-  .box {
-    width: 500px;
-    margin: 100px 0 0 150px;
-  }
-
-  .dm {
-    width: 600px;
-    margin: 100px 150px 0 10px;
-    border: 3px solid white;
-    padding: 20px;
-    border-radius: 5px;
-  }
-
-  .headbox {
-    border: 3px solid white;
-    border-bottom: 0;
-    background-color: white;
-    border-radius: 5px 5px 0 0;
-  }
-
-  .imgbox {
-    height: 500px;
-    border: 3px solid white;
-    border-bottom: 0;
-    background-image: url('../img_c.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-
-  .bottombox {
-    border: 3px solid white;
-    background-color: white;
-    border-radius: 0 0 5px 5px;
-  }
-
-  .introduce {
-    margin: 10px 0 10px 20px;
-  }
-
-  .chat {
-    border-radius: 30px 30px 30px 0px;
-    margin: 20px 0 0 20px;
-    background-color: white;
-    padding: 20px;
-    display: inline-block;
-  }
-
-  .answer {
-    border-radius: 30px 30px 0px 30px;
-    margin: 20px 20px 0 0;
-    background-color: deepskyblue;
-    padding: 20px;
-    display: inline-block;
-    color: white;
-
-  }
-
-  .rtbox {
-    display: flex;
-    justify-content: flex-end;
-  }
-
-  .sendbox {
-    height: 50px;
-    border: 2px;
-    background-color: white;
-    border-radius: 20px;
-  }
-
-  #bottomas {
-    margin: 20px 0 20px 0;
-  }
-
-  .sendmsg {
-    color: darkgrey;
-  }
-</style>
 
 <body>
   <div class="container-fluid">
