footer 퍼블리싱완료

--- a/introduce_c/introduce_c.html
+++ b/introduce_c/introduce_c.html
@@ -145,4 +145,21 @@
       </div>
     </div>
   </div>
+  <footer>
+    <div class="footer-container">
+      <div class="banner">
+        <div class="banner-img-box">
+          <img class="banner-img" src="sparta.png">
+        </div>
+        <div class="banner-ingfo-box">
+          <p class="text1">
+            내일배움캠프
+          </p>
+          <p class="text2">
+            11월 모집 예정
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
