--- a/index_soli.html
+++ b/index_soli.html
@@ -116,13 +116,13 @@
         <!-- Swiper -->
         <div id="div1" class="swiper mySwiper">
             <div class="swiper-wrapper">
-                <div class="swiper-slide">Haeundae, Busan<img src="/slide_img1.jpg" alt=""></div>
-                <div class="swiper-slide">Haeundae, Busan<img src="/slide_img2.jpg" alt=""></div>
-                <div class="swiper-slide">Mt. Mireuksan in Tongyeong<img src="/slide_img3.jpg" alt=""></div>
-                <div class="swiper-slide">Crater Lake in Oregon, USA<img src="/slide_img4.jpg" alt=""></div>
-                <div class="swiper-slide">San Francisco, California<img src="/slide_img5.jpg" alt=""></div>
-                <div class="swiper-slide">Redwood National Park, California<img src="/slide_img7.jpg" alt=""></div>
-                <div class="swiper-slide">A beach on the way home from Redwood National Park<img src="/slide_img6.jpg"
+                <div class="swiper-slide">Haeundae, Busan<img src="slide_img1.jpg" alt=""></div>
+                <div class="swiper-slide">Haeundae, Busan<img src="slide_img2.jpg" alt=""></div>
+                <div class="swiper-slide">Mt. Mireuksan in Tongyeong<img src="slide_img3.jpg" alt=""></div>
+                <div class="swiper-slide">Crater Lake in Oregon, USA<img src="slide_img4.jpg" alt=""></div>
+                <div class="swiper-slide">San Francisco, California<img src="slide_img5.jpg" alt=""></div>
+                <div class="swiper-slide">Redwood National Park, California<img src="slide_img7.jpg" alt=""></div>
+                <div class="swiper-slide">A beach on the way home from Redwood National Park<img src="slide_img6.jpg"
                         alt=""></div>
 
             </div>
@@ -146,7 +146,7 @@
         </div>
 
         <div id="div3">
-            <img src="/infj_hash.png" alt="mbti_img">
+            <img src="infj_hash.png" alt="mbti_img">
             <div id="hashtags">
                 <h1>나의 MBTI 유형 키워드 #INFJ</h1>
                 <p> #옹호자 #INFJ #이상주의 #원칙주의 #자아실현 #깊은생각 #사명의식 #양심적 #진실한소통 #공감능력 #창의력 #정의추구 #불평등해소 #미래를위한희망 #소수의친밀한관계
