팀원소개카드 통일

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div id="img-team-k" class="front">
           </div>
           <!-- 뒷면 -->
-          <div class="back" id="img-back-1" onclick="location.href='team_l.html'">
+          <div class="back" id="img-back-1" onclick="location.href='kim.html'">
             김현철
             INFP
           </div>
@@ -60,7 +60,7 @@
           <!-- 앞면 -->
           <div id="img-team-p" class="front"></div>
           <!-- 뒷면 -->
-          <div class="back" id="img-back-2" onclick="location.href='team_l.html'">
+          <div class="back" id="img-back-2" onclick="location.href='index_soli.html'">
             박솔이
             INFJ
           </div>
