--- a/team_l.html
+++ b/team_l.html
@@ -1,114 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>A-03조 이경욱</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="team_l.css" />
+    <script type="module">
+        // Firebase SDK 라이브러리 가져오기
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
+        import { getFirestore } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+        import { collection, addDoc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+        import { getDocs } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+            apiKey: "AIzaSyB8G7z52Zv1Pyyw_z7qI918dkl56pVquWk",
+            authDomain: "mini-55e61.firebaseapp.com",
+            projectId: "mini-55e61",
+            storageBucket: "mini-55e61.appspot.com",
+            messagingSenderId: "706677079237",
+            appId: "1:706677079237:web:be912727e487f2703504ac",
+            measurementId: "G-D9FKTG4KL5"
+        };
+
+        // Firebase 인스턴스 초기화
+        const app = initializeApp(firebaseConfig);
+        const db = getFirestore(app);
+
+
+        function posting() {
+
+        }
+
+        $("#postingbtn").click(async function () {
+            let name = $('#name').val();
+            let comment = $('#comment').val();
+
+            let doc = {
+                'name': name,
+                'comment': comment
+            };
+            await addDoc(collection(db, "guestbook"), doc);
+            alert('저장 완료');
+            window.location.reload();
+        })
+
+        let docs = await getDocs(collection(db, "guestbook"));
+        docs.forEach((doc) => {
+            let row = doc.data();
+
+            let name = row['name'];
+            let comment = row['comment'];
+            let temp_html = `
+            <p>            
+                <div class="postingbox">
+                    <label for="floatingInput" id="post_name">${name}</label>
+                    <label for="floatingInput" id="post_comment">${comment}</label>
+                </div>
+            </p>`;
+            $('#card').append(temp_html);
+        });
+
+    </script>
+
 </head>
-
-<style>
-    /*전체*/
-    body {
-        height: 100vh;
-        width: 100vw;
-        background-color: rgb(236, 236, 236);
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
-
-    .container {
-        display: grid;
-        grid-template-rows: repeat(1, minmax(100px, auto));
-        grid-template-columns: 1.5fr 1fr;
-        grid-auto-rows: 200px;
-        gap: 20px;
-    }
-    .item {
-        background-color: rgb(255, 255, 255);
-        border-radius: 10px;
-
-    }
-    /*상단 소개페이지*/
-    .item:nth-child(1) {
-        grid-row: 1 /3;
-        grid-column: 1 / 3;
-        text-align: center;
-        padding-top: 110px;
-        font-size: 60px;
-        font-weight: 600;
-    }  
-
-    
-    /*이미지*/
-    .item:nth-child(3) {
-        grid-row: 3 / 6;
-        grid-column: 2 / 3;
-        object-fit: cover;
-
-    }
-    /*첫 번째 박스*/
-    .item:nth-child(2) {
-        padding: 20px;
-        font-size: 18px;
-        font-weight: 600;
-    }
-    #ex1 {
-        font-size: 15px;
-        font-weight: 100;
-    }
-
-    /*두 번째 박스*/
-    .item:nth-child(4) {
-        padding: 20px;
-        font-size: 18px;
-        font-weight: 600;
-    }
-    #ex2 {
-        font-size: 15px;
-        font-weight: 100;
-    }
-
-    /*세 번째 박스*/
-    .item:nth-child(5) {
-        padding: 20px;
-        font-size: 18px;
-        font-weight: 600;
-    }
-    #ex3 {
-        font-size: 15px;
-        font-weight: 100;
-    }
-
-
-
-</style>
 
 <body>
     <div class="container">
         <div class="item">팀원 소개 페이지</div>
         <div class="item">1. 자신에 대한 설명 및 MBTI<br><br>
             <span id="ex1">
-            안녕하세요.
-            저는 미술을하다가 코딩에 흥미가 있어 이번 내일배움캠프에 지원하게 된 이경욱이라고 합니다.<br>
-            MBTI는 ISTJ이고, 계획세우는걸 좋아해요<br>
-            잘 부탁드립니다!!
+                안녕하세요.
+                저는 미술을하다가 코딩에 흥미가 있어 이번 내일배움캠프에 지원하게 된 이경욱이라고 합니다.<br>
+                MBTI는 ISTJ이고, 계획세우는걸 좋아해요<br>
+                잘 부탁드립니다!!
             </span>
         </div>
         <img class="item" src=".\\img_l2.jpg" width="100%" height="100%">
         <div class="item">2. 객관적으로 살펴본 자신의 장점<br><br>
             <span id="ex2">
-            무던한 편이어서 감정 기복이 적고<br>
-            내향적인 편이라 제 이야기를 하기보단 들어주는 걸 더 잘해요<br>
+                무던한 편이어서 감정 기복이 적고<br>
+                내향적인 편이라 제 이야기를 하기보단 들어주는 걸 더 잘해요<br>
             </span>
         </div>
         <div class="item">3. 자신의 스타일 협업 스타일 소개<br><br>
             <span id="ex3">
-            앞에 나서서 이끌기보다 업무 진행과정에 맞춰<br>
-            필요한 사항을 제시하고 정리하는 서포트 역할을 선호해요<br>
+                앞에 나서서 이끌기보다 업무 진행과정에 맞춰<br>
+                필요한 사항을 제시하고 정리하는 서포트 역할을 선호해요<br>
             </span>
         </div>
+        <div class="item">
+            <div class="guestbook_title">
+                방명록
+            </div>
+            <div class="input">
+                <input type="text" id="name" required>
+                <label id="guestbook_input">Name</label>
+                <span id="input_bar"></span>
+            </div>
+            <div class="input">
+                <input type="text" id="comment" required>
+                <label id="guestbook_input">Comment</label>
+                <span id="input_bar"></span>
+            </div>
+            <div class="gb_btn">
+                <button id="postingbtn">
+                    등록
+                </button>
+            </div>
+        </div>
+        <div class="item" id="card">
 
-
+        </div>
     </div>
 </body>
+
 </html>
