개인페이지수정

--- a/introduce_c/introduce_c.html
+++ b/introduce_c/introduce_c.html
@@ -16,7 +16,14 @@
   import { collection, addDoc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
   import { getDocs } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
 
-  const firebaseConfig = {
+  export const firebaseConfig = {
+    apiKey: "AIzaSyDNtjo3St-uSuZWw8g2U27VmlJqRzKhJuY",
+    authDomain: "sparta-117fd.firebaseapp.com",
+    projectId: "sparta-117fd",
+    storageBucket: "sparta-117fd.appspot.com",
+    messagingSenderId: "618455547016",
+    appId: "1:618455547016:web:9ee208eddfda2eb239f33d",
+    measurementId: "G-FGHJK1Q2G5"
   };
 
   $("#postingbtn").click(async function () {
@@ -113,7 +120,7 @@
               <div class="introduce">
                 #3기_React #frontend #A-03조 #천영륜
                 <br />
-                #ISFP #비전공자 #초보 #잘부탁드립니다!
+                #ISFP #비전공자 #잘부탁드립니다! ★ https://forme31.tistory.com
               </div>
             </div>
           </div>
@@ -217,7 +224,7 @@
         </div>
         <div class="banner-ingfo-box">
           <p class="text1">
-            내일배움캠프
+            내일배움캠프 4기
           </p>
           <p class="text2">
             11월 모집 예정
