자바스크립트 경로 수정

--- a/kim.html
+++ b/kim.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="stylesheet" href="kim.css" />
+        <link rel="stylesheet href="kim.css" />
+        <script type="module" src="./kim.js"></script>
     </head>
     <body>
         <header class="header">
@@ -256,7 +257,5 @@
                 </section>
             </div>
         </main>
-
-        <script type="module" src="kim.js"></script>
     </body>
 </html>
