fire base 데이터삭제 코드 수정정

--- a/index_soli.html
+++ b/index_soli.html
@@ -68,7 +68,7 @@
         });
 
         $(".delete-btn").click(async function () {
-            let id = $(".card").attr("id");
+            let id = $(this).closest('.card').attr('id'); ;
             await deleteDoc(doc(db, "comments", id));
             alert('삭제 완료!');
             window.location.reload();
