사진 확장자 이름 변경

--- a/kim.html
+++ b/kim.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header class="header">
-            <div style="display: flex; justify-content: space-between">
+            <div style="display: flex; justify-content: spgace-between">
                 <div style="display: flex; align-items: center">
                     <img class="profileImg" />
                     <div>
